# AlcuinCalendar

./: .dockerignore  .gitignore  AlcuinSelenium.py  Dockerfile  ICalWriter.py  README.md  VARS.py  WriteCalendar.py  docker-compose-dokploy.yml  docker-compose.yml  install.sh  main.py  pyproject.toml  requirements.txt  run.sh  update.sh
src/: API.py  main.py
src/pages/: index.html
src/scraper/: AlcuinSelenium.py  RefreshQueue.py
src/utils/: ICalWriter.py  UserManager.py  VARS.py  utils.py
