[project]
name = "apialcuincalendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "bs4>=0.0.2",
    "fastapi>=0.116.1",
    "flask>=3.1.2",
    "icalendar>=6.3.1",
    "mypy>=1.18.2",
    "pytz>=2025.2",
    "selenium>=4.35.0",
    "uvicorn>=0.35.0",
]
